--- a/src/app/App.less
+++ b/src/app/App.less
@@ -25,4 +25,14 @@ body {
       }
     }
   }
+  .ant-layout-footer {
+    margin-left: 28%;
+    .button {
+      width: 180px;
+      height: 40px;
+      background-color: #468EB7;
+      color: #FFFFFF;
+      margin-right: 100px;
+    }
+  }
 }
