--- a/src/app/BottomContent/bottomContent.less
+++ b/src/app/BottomContent/bottomContent.less
@@ -1,5 +1,8 @@
 .bottom-content {
-  margin: 40px 200px;
+  margin: 0px 200px;
+  .section {
+    margin-top: 30px;
+  }
   .read-only {
     background: #438EB9;
     border: 0;
@@ -70,6 +73,13 @@
         }
 
       }
+    }
+  }
+  .addSectionCard {
+    margin-top: 60px;
+    img {
+      width: 100px;
+      margin-left: 40%;
     }
   }
 
