--- a/src/component/BottomContent/bottomContent.less
+++ b/src/component/BottomContent/bottomContent.less
@@ -12,7 +12,7 @@
   }
   #input-title {
     position: absolute;
-    margin-top: -62px;
+    margin-top: -66px;
     margin-left: -10px;
     display: inline-block;
     width: 100px;
@@ -80,6 +80,12 @@
     img {
       width: 100px;
       margin-left: 40%;
+    }
+  }
+  .selectQuizz {
+    margin-top: -12px;
+    .ant-radio-wrapper {
+      margin-left: 30px;
     }
   }
 
