--- a/src/style/paperQuizs.less
+++ b/src/style/paperQuizs.less
@@ -1,14 +1,7 @@
 .bottom-content {
-  margin: 0px 200px;
+  margin: 0 200px;
   .section {
     margin-top: 30px;
-  }
-  .read-only {
-    background: #438EB9;
-    border: 0;
-    outline: medium;
-    color: transparent;
-    text-shadow: 0 0 0 #FFF;
   }
   #input-title {
     position: absolute;
@@ -16,6 +9,14 @@
     margin-left: -10px;
     display: inline-block;
     width: 100px;
+  }
+  .quizType {
+    position: absolute;
+    margin-top: -62px;
+    margin-left: -10px;
+    display: inline-block;
+    width: 100px;
+    color: #FFFFFF;
   }
   .input-header {
     overflow: hidden;
