--- a/src/style/paperQuizs.less
+++ b/src/style/paperQuizs.less
@@ -83,7 +83,7 @@
       margin-left: 40%;
     }
   }
-  .selectQuizz {
+  .selectQuiz {
     margin-top: -12px;
     .ant-radio-wrapper {
       margin-left: 30px;
