--- a/src/style/basicQuizContent.less
+++ b/src/style/basicQuizContent.less
@@ -1,6 +1,8 @@
-.ant-row {
-  margin-top: 30px;
-  font-weight: 700
+.blank {
+  .ant-row {
+    margin-top: 30px;
+    font-weight: 700
+  }
 }
 
 .ant-radio-group {
@@ -28,7 +30,7 @@
   .ant-checkbox-wrapper + .ant-checkbox-wrapper {
     margin-left: 0;
   }
-  .ant-col-16{
+  .ant-col-16 {
     margin-left: 20px;
   }
 }
