--- a/src/style/paperQuizs.less
+++ b/src/style/paperQuizs.less
@@ -72,6 +72,22 @@
             padding: 7px;
           }
         }
+        .delete {
+          float: right;
+          font-size: 20px;
+          display: inline-block;
+          margin-top: 37px;
+          margin-right: 3px;
+          color: #D15B4E;
+        }
+        .modify {
+          float: right;
+          font-size: 20px;
+          display: inline-block;
+          margin-top: 37px;
+          margin-right: 3px;
+          color: #000000;
+        }
 
       }
     }
