--- a/src/style/paperQuizs.less
+++ b/src/style/paperQuizs.less
@@ -2,13 +2,13 @@
   margin: 0 200px;
   .section {
     margin-top: 30px;
-  }
-  #input-title {
-    position: absolute;
-    margin-top: -66px;
-    margin-left: -10px;
-    display: inline-block;
-    width: 100px;
+    .anticon-form {
+      font-size: 14px;
+      margin-left: 100px;
+    }
+    #input-title {
+      width: 200px;
+    }
   }
   .quizType {
     position: absolute;
@@ -28,11 +28,6 @@
     color: #FFFFFF;
     .ant-card-head-title {
       color: #FFFFFF;
-    }
-    .anticon-form {
-      margin-left: -820px;
-      position: absolute;
-      margin-top: 4px;
     }
   }
   .topic-list {
